# Chord

./: .editorconfig  .gitignore  Cargo.toml  README.md  Trunk.toml  meson.build
api/: Cargo.toml
api/src/: auth.rs  lib.rs  message.rs  user.rs
chord/: Cargo.toml
chord/src/: main.rs
front/: Cargo.toml  index.html  index.scss
front/src/: app.rs  main.rs
front/src-tauri/: tauri.conf.json
include/: api.h  colors.h  structures.h  ui.h
src/: main.c
src/api/: api.c  channel.c  user.c
src/structures/: user.c
src/ui/: input.c  messages.c  profile.c  userlist.c  util.c
